--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,4 @@
 [buildout]
-unzip = true
 develop = 
     .
 versions = versions
@@ -8,7 +7,7 @@ versions = versions
 parts =
     import
     work
-    omelette
+#    omelette
 
 
 [versions]
