starting with tests

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,10 +7,18 @@ versions = versions
 parts =
     import
     work
+    test
 #    omelette
 
 
 [versions]
+
+[test]
+recipe = zc.recipe.egg
+eggs = 
+    ${import:eggs}
+    pytest
+
 
 [omelette]
 recipe = collective.recipe.omelette
